Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- evdev needs to be loaded before calling getInputDevices_and_usb
  else it will lead to a crash (pterjan)
- display_driver_helper: do not load radeon driver if the proprietary
  driver is temporarily disabled on a PowerXpress system
- display_driver_helper: allow automatic loading of the implicit driver
  on systems without xorg.conf if the presence of other files indicates
  that this is not a live cd boot before automatic X.org configuration
  (fixes radeon KMS without xorg.conf)

Version 0.92 - 21 April 2011

- disable debug output of display_driver_helper by default
- fix ahead-of-X-server loading of proprietary and fglrx kernel modules
- try unloading unconfigured drivers in "display_driver_helper --check-loaded"

Version 0.91 - 17 April 2011

- use UseEdid instead of IgnoreEDID with nvidia96xx since the latter is
  obsolete (#40006)
- remove "3D hardware acceleration" from the UI, it will always be enabled
  by default since we unconditionnally add the "dri" module to xorg.conf now
  (#58933) 
- add display_driver_helper script (used by XFdrake, udev, drakx, dkms)
- add/remove nokmsboot boot option as needed
- ask for reboot instead of X server restart, as it is commonly needed

Version 0.90 - 26 May 2010

- translation updates

Version 0.89 - 11 May 2010

- mouse:
  o remove imwheel support

Version 0.88 - 25 February 2010

- rename wacom driver package to its current name
- remove obsoleted video drivers from video driver list, add some new ones

Version 0.87 - 9 February 2010

- XFdrake:
  o use -X option for ldconfig when switching alternatives, we only need the
    cache rebuilt (Anssi Hannula)
  o do not disable Composite extension by default when using fglrx driver
    (Anssi Hannula)
  o do not disable loading of dri module for non-glx drivers, as KMS drivers
    require it as well
  o do not disable loading of glx module for fbdev, in order to allow AIGLX