@@ -1,5 +1,7 @@
 Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
 
+- harddrake: configure default resolution (and background) even if card
+  configuration fails (useful if vbox video driver is not available)
 - evdev needs to be loaded before calling getInputDevices_and_usb
   else it will lead to a crash (pterjan)
 - display_driver_helper: do not load radeon driver if the proprietary
